<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A3367"
    tools:context=".OnboardingScreen7">

    <ImageButton
        android:id="@+id/backArrow6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="Go back"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <ProgressBar
        android:id="@+id/topProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:progress="60"
        android:max="100"
        android:progressTint="#B983FF"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/backArrow6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
    android:id="@+id/questionText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="WHAT KIND OF DEBT DO \nYOU HAVE?"
    android:textColor="#FFFFFF"
    android:textSize="18sp"
    android:textStyle="bold"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@id/topProgressBar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="32dp"
    android:layout_marginHorizontal="16dp" />

    <LinearLayout
        android:id="@+id/optionsBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/questionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/carLoansBtn"
        style="@style/SelectableOption"
        android:text="@string/option_carLoans"
        android:layout_width="400dp"
        app:layout_constraintTop_toBottomOf="@id/optionsBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <Button
        android:id="@+id/studentLoansBtn"
        style="@style/SelectableOption"
        android:text="@string/option_studentLoans"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/carLoansBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/personalLoansBtn"
        style="@style/SelectableOption"
        android:text="@string/option_personalLoans"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/studentLoansBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/laybuyBtn"
        style="@style/SelectableOption"
        android:text="@string/option_laybay"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/personalLoansBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/creditCardBtn"
        style="@style/SelectableOption"
        android:text="@string/option_creditCard"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/laybuyBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/other1Btn"
        style="@style/SelectableOption"
        android:text="@string/option_other1"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/creditCardBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>