<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A3367"
    tools:context=".OnboardingScreen8">


    <ImageButton
        android:id="@+id/backArrow7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="Go back"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <ProgressBar
        android:id="@+id/topProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:progress="70"
        android:max="100"
        android:progressTint="#B983FF"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/backArrow7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="HOW DO YOU GET AROUND??"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/topProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp" />

    <LinearLayout
        android:id="@+id/optionsBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/questionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/walkBtn"
        style="@style/SelectableOption"
        android:text="@string/option_walk"
        android:layout_width="400dp"
        app:layout_constraintTop_toBottomOf="@id/optionsBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <Button
        android:id="@+id/bikeBtn"
        style="@style/SelectableOption"
        android:text="@string/option_bike"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/walkBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/publicTransportBtn"
        style="@style/SelectableOption"
        android:text="@string/option_publicTransport"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/bikeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/carBtn"
        style="@style/SelectableOption"
        android:text="@string/option_car"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/publicTransportBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/other2Btn"
        style="@style/SelectableOption"
        android:text="@string/option_other2"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/carBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>