<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A3367"
    tools:context=".OnboardingScreen9">

    <ImageButton
        android:id="@+id/backArrow8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="Go back"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <ProgressBar
        android:id="@+id/topProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:progress="80"
        android:max="100"
        android:progressTint="#B983FF"
        android:backgroundTint="#D9D9D9"
        app:layout_constraintTop_toBottomOf="@id/backArrow8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="WHICH OF THESE SUBSCRIPTIONS \nDO YOU HAVE?"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/topProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp" />

    <LinearLayout
        android:id="@+id/optionsBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/questionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/tvBtn"
        style="@style/SelectableOption"
        android:text="@string/option_tv"
        android:layout_width="400dp"
        app:layout_constraintTop_toBottomOf="@id/optionsBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <Button
        android:id="@+id/gymBtn"
        style="@style/SelectableOption"
        android:text="@string/option_gym"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/musicBtn"
        style="@style/SelectableOption"
        android:text="@string/option_music"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/gymBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/other3Btn"
        style="@style/SelectableOption"
        android:text="@string/option_other3"
        android:layout_width="400dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/musicBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>